--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,36 +1,29 @@
-FROM nvidia/cuda:10.1-cudnn7-runtime-ubuntu18.04
+FROM nvcr.io/nvidia/l4t-base:r32.3.1
 
-ENV DEBIAN_FRONTEND noninteractive
-ENV LANG C.UTF-8
-ENV LC_ALL C.UTF-8
-ENV ROS_DISTRO melodic
+# setup timezone & install packages
+ENV DEBIAN_FRONTEND=noninteractive
+RUN echo 'Etc/UTC' > /etc/timezone && \
+    ln -s /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
+    apt-get update && \
+    apt-get install -q -y tzdata dirmngr gnupg2 python-pip && \
+    apt-get install -y --no-install-recommends make g++ && \
+    apt-get install -y libusb-1.0 gtk+-3.0 build-essential libglfw3-dev && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN apt-get -o Acquire::ForceIPv4=true update && apt-get -yq dist-upgrade \
-    && apt-get -o Acquire::ForceIPv4=true install -yq --no-install-recommends \
-    locales \
-    cmake \
-    git \
-    vim \
-    gedit \
-    lsb-release \
-    wget \
-    sudo \
-    build-essential \
-    dirmngr \
-    gnupg2 \
-    mercurial \
-    python-gtk2 \
-    python-gobject \
-    python-tk \
-    libcanberra-gtk-module \
-    libcanberra-gtk3-module \
-    python3-pip \
-    python3-setuptools \
-    python3-numpy \
-    python3-empy  \
+# setup keys and source.list
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654 && \
+    echo "deb http://packages.ros.org/ros/ubuntu bionic main" > /etc/apt/sources.list.d/ros1-latest.list
+
+# install bootstrap tools
+RUN apt-get update && apt-get install --no-install-recommends -y \
+    python-rosdep \
+    python-rosinstall \
+    python-vcstools \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# setup environment
 ENV SHELL=/bin/bash \
     NB_USER=sis \
     NB_UID=1000 \
@@ -42,117 +35,112 @@ ENV HOME=/home/${NB_USER}
 RUN adduser --disabled-password \
     --gecos "Default user" \
     --uid ${NB_UID} \
-    ${NB_USER} 
+    ${NB_USER}
 
 RUN echo "root:root" | chpasswd
 RUN echo "${NB_USER}:111111" | chpasswd
 
-###################################### ROS #####################################
+# bootstrap rosdep
+RUN rosdep init \
+    && rosdep update
 
-# setup sources.list
-RUN echo "deb http://packages.ros.org/ros/ubuntu `lsb_release -sc` main" > /etc/apt/sources.list.d/ros-latest.list \
-    && echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list
-
-# setup keys
-RUN apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654 \
-    && wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add -
-
-
-# install bootstrap tools
-RUN apt-get -o Acquire::ForceIPv4=true update && apt-get -o Acquire::ForceIPv4=true install --no-install-recommends -y \
-    ros-$ROS_DISTRO-desktop-full \
-    ros-$ROS_DISTRO-joy \
-    ros-$ROS_DISTRO-joystick-drivers \
-    ros-$ROS_DISTRO-pointcloud-to-laserscan \
-    ros-$ROS_DISTRO-robot-localization \
-    ros-$ROS_DISTRO-spacenav-node \
-    ros-$ROS_DISTRO-tf2-sensor-msgs \
-    ros-$ROS_DISTRO-twist-mux \
-    ros-$ROS_DISTRO-velodyne-simulator \
-    ros-$ROS_DISTRO-serial \
-    ros-$ROS_DISTRO-soem \
-    ros-$ROS_DISTRO-openslam-gmapping \
-    ros-$ROS_DISTRO-geodesy \
-    ros-$ROS_DISTRO-cartographer-* \
-    ros-$ROS_DISTRO-ddynamic-reconfigure \
-    python-rosdep \
-    python-rosinstall \
-    python-rosinstall-generator \
-    python-wstool \
+# install ros packages
+ENV ROS_DISTRO melodic
+RUN apt-get update && apt-get install -y \ 
+    ros-${ROS_DISTRO}-desktop \
+    ros-${ROS_DISTRO}-perception \
+    ros-${ROS_DISTRO}-rgbd-launch \
+    ros-${ROS_DISTRO}-joystick-drivers \
+    ros-${ROS_DISTRO}-pointcloud-to-laserscan \
+    ros-${ROS_DISTRO}-robot-localization \
+    ros-${ROS_DISTRO}-spacenav-node \
+    ros-${ROS_DISTRO}-geodesy \
+    ros-${ROS_DISTRO}-serial \
+    ros-${ROS_DISTRO}-controller-manager \
+    ros-${ROS_DISTRO}-tf2-sensor-msgs \
+    ros-${ROS_DISTRO}-twist-mux \
+    libmove-base-msgs-dev \
+    libpcap-dev \    
+    python-pip \
+    python-setuptools \
+    python-scipy \
+    python-gobject \
+    python-gtk2 \
+    python3-pip \
+    python3-setuptools \
+    python3-scipy \
+    libcanberra-gtk-module \
+    libcanberra-gtk3-module \
+    libhdf5-serial-dev \
+    hdf5-tools libhdf5-dev \
+    zlib1g-dev zip \
+    libjpeg8-dev \
+    liblapack-dev \
+    libblas-dev \
+    gfortran \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 
-
-##################################### PIP ######################################
-
-RUN pip3 install --upgrade pip setuptools
-
-RUN pip3 install --upgrade \
-    gym \
-    tensorflow \
-    matplotlib \
-    pandas \
-    pypozyx \
-    requests \
-    jupyter \
-    ipykernel \
-    rospkg \
-    catkin-tools \
-    scikit-image \
-    scikit-learn \
-    numpy \
-    gdown
-
-RUN pip3 install \
-    torch==1.5.0+cu101 \
-    torchvision==0.6.0+cu101 \
-    -f https://download.pytorch.org/whl/torch_stable.html
-
-
-########################################################### extra ###########################################################
-
-RUN apt-get -o Acquire::ForceIPv4=true update && apt-get -o Acquire::ForceIPv4=true install --no-install-recommends -y \
-    python3-opencv \
-    && rm -rf /var/lib/apt/lists/*
-
-######################################## realsense ########################################
-
-RUN apt-get update && apt-get install -y \
-    libsuitesparse-dev\
-    software-properties-common \
-    libusb-1.0-0-dev \
-    libx11-dev \
-    xorg-dev \
-    libgl1-mesa-dev \
-    libglu1-mesa-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-# set the version of the realsense library
-ENV LIBREALSENSE_VERSION 2.36.0
-RUN wget https://github.com/IntelRealSense/librealsense/archive/v${LIBREALSENSE_VERSION}.tar.gz --no-check-certificate && \
-    tar -xvzf v${LIBREALSENSE_VERSION}.tar.gz && \
-    rm v${LIBREALSENSE_VERSION}.tar.gz && \
-    mkdir -p librealsense-${LIBREALSENSE_VERSION}/build && \
-    cd librealsense-${LIBREALSENSE_VERSION}/build && \
-    cmake .. && \
-    make && \
-    make install && \
-    rm -rf librealsense-${LIBREALSENSE_VERSION}
-
-##################################### TAIL #####################################
-
-RUN chown -R ${NB_UID} ${HOME}/
-RUN echo "${NB_USER} ALL=(ALL)  ALL" > /etc/sudoers
+# # set the version of the realsense library
+# ENV LIBREALSENSE_VERSION 2.24.0
+# RUN wget https://github.com/IntelRealSense/librealsense/archive/v${LIBREALSENSE_VERSION}.tar.gz && \
+#     tar -xvzf v${LIBREALSENSE_VERSION}.tar.gz && \
+#     rm v${LIBREALSENSE_VERSION}.tar.gz && \
+#     mkdir -p librealsense-${LIBREALSENSE_VERSION}/build && \
+#     cd librealsense-${LIBREALSENSE_VERSION}/build && \
+#     cmake .. && \
+#     make && \
+#     make install && \
+#     rm -rf librealsense-${LIBREALSENSE_VERSION}
 
 # setup entrypoint
 COPY ./ros_entrypoint.sh /
 
+# installing pytorch
+WORKDIR /tmp
+RUN wget https://nvidia.box.com/shared/static/6t52xry4x2i634h1cfqvc9oaoqfzrcnq.whl -O torch-1.3.0-cp27-cp27mu-linux_aarch64.whl && \
+    pip install torch-1.3.0-cp27-cp27mu-linux_aarch64.whl torchvision && \
+    rm -rf torch-1.3.0-cp27-cp27mu-linux_aarch64.whl
+
+RUN pip2 install --upgrade \
+    pip \
+    setuptools
+
+RUN pip2 install  \
+    numpy==1.16.1 \
+    gast==0.2.2 \
+    matplotlib \
+    pandas \
+    pypozyx \
+    requests \
+    Pillow 
+
+RUN pip3 install --upgrade \
+    pip \
+    testresources \
+    setuptools
+
+RUN pip3 install --upgrade \
+    numpy==1.16.1 \
+    future==0.17.1 \
+    mock==3.0.5 \
+    h5py==2.9.0 \
+    keras_preprocessing==1.0.5 \
+    keras_applications==1.0.8 \
+    gast==0.2.2 \
+    futures \
+    protobuf \
+    pybind11 \
+    pyyaml \
+    rospkg \
+    catkin-tools 
+
+
+RUN chown -R ${NB_USER}:${NB_USER} ${HOME}/
+RUN echo "sis ALL=(ALL)  ALL" >> /etc/sudoers
+
 ENTRYPOINT ["/ros_entrypoint.sh"]
-
-# Support of nvidia-docker 2.0
-ENV NVIDIA_VISIBLE_DEVICES=all
-ENV NVIDIA_DRIVER_CAPABILITIES=all
-
 USER ${NB_USER}
-
 WORKDIR ${HOME}
+CMD ["bash"]
